--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@thanpolas/univ3prices": "^3.0.2",
     "axios": "^1.4.0",
     "ccxt": "^3.1.40",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.1.4",
     "pino": "^8.14.1",
     "pino-pretty": "^10.0.0",
     "simple-statistics": "^7.8.3",
     "ts-md5": "^1.3.1",
+    "turbos-clmm-sdk": "^0.4.1",
     "websocket-ts": "^1.1.1",
     "ws": "^8.13",
-    "wscat": "^5.2.0",
-    "turbos-clmm-sdk": "^0.4.1"
+    "wscat": "^5.2.0"
   }
 }
